--- a/IDL DSSG Notebook.Rmd
+++ b/IDL DSSG Notebook.Rmd
@@ -30,13 +30,13 @@ options(scipen = 10)
 ---
 
 # Executive Summary
-The purpose of this documentation is to outline my preprocessing of the residential building stock assessment (RBSA) dataset completed by the Northwest Energy Efficiency Association (NEEA) in 2017 to determine its research potential. Results from the exploratory data analysis suggest that the RBSA data is a valuable dataset for identifying energy consumption and equity issues. The RBSA allows researchers to identify energy efficiency opportunities, the efficiency of specific appliances, and much more. The RBSA dataset includes residential demographic data, allowing researchers to disaggregate energy efficiency by family size, income, education level, age, and other demographic constructs. However, the RBSA demographic dataframe does not provide race/ethnicity nor gender data. More research opportunities become available when the RBSA data is merged with other dataframes. For example, Buylova (2020) was able to identify which regions in Oregon and racial/ethnic groups were more susceptible to high energy burden by combining the RBSA data with the American Community Survey (ACS) data.
+The purpose of this documentation is to outline my data exploration process to determine the research potential of the 2017 residential building stock assessment (RBSA) dataset completed by the Northwest Energy Efficiency Association (NEEA). Results from the exploratory data analysis suggest that the RBSA data is a valuable dataset for identifying energy consumption and equity issues. The RBSA allows researchers to identify energy efficiency opportunities, the efficiency of specific appliances, and much more. The RBSA dataset includes residential demographic data, allowing researchers to disaggregate energy efficiency by family size, income, education level, age, and other demographic constructs. However, the RBSA demographic dataframe does not provide race/ethnicity nor gender data. More research opportunities become available when the RBSA data is merged with other dataframes. For example, Buylova (2020) was able to identify which regions in Oregon and racial/ethnic groups were more susceptible to high energy burden by combining the RBSA data with the American Community Survey (ACS) data.
 
-This document loosely follows the methods Buylova employed to conduct her analysis. Buylova's analysis included housing variables and household characteristic variables. My data exploration includes cleaning and wrangling the RBSA data to create the same variables Buylova used and more. As aforementioned, Buylova (2020) used the RBSA data completed by the NEEA in 2017 and the 2012-2017 ACS data to investigate the dynamics between energy use and socio-demographic characteristics in spatial modeling of residential energy consumption. The underlying research inquiry guiding my exploratory data analysis of the RBSA data is the confluence of energy cost and housing burden.
+This document loosely follows the methods Buylova employed to conduct her analysis. Buylova's analysis included housing variables and household characteristic variables (see Appendix A for more information). My data exploration includes cleaning and wrangling the RBSA data to create the same variables Buylova used and more. As aforementioned, Buylova (2020) used the RBSA data completed by the NEEA in 2017 and the 2012-2017 ACS data to investigate the dynamics between energy use and socio-demographic characteristics in spatial modeling of residential energy consumption. The underlying research inquiry guiding my exploratory analysis of the RBSA data is the confluence of energy cost and housing burden.
 
 The Department of Housing and Urban Development (HUD) considers people spending more than 30% of their income on housing as housing burdened. Housing costs include rent, mortgage payment, property taxes, utilities, and housing insurance (Lin, 2018). There has recently been a focus on how energy prices, i.e., utilities, contribute to housing burden. Energy bills of more than 6-10% of income are considered unaffordable (Hernandez & Bird, 2010; Heindl, 2015; Kontokosta et al., 2019). Previous research demonstrates that the energy cost burden disproportionately affects lower-income households because they are most at risk for living in substandard and inefficient housing (Hernandez & Phillips, 2015). Energy upgrades can help alleviate energy cost burden and potentially housing burden by saving a low-income multi-family household up to $1,500 per year per household (Kontokosta et al., 2019).
 
-Energy cost burden is a function of both income and energy consumption. Drehobl and Ross (2016) found that an average low-income household energy burden was 7.2%, higher than an average higher-income household energy burden of 2.3%. Findings from a federal energy assistance program evaluation determined that low-income households represent 92% of all households with an energy burden of 10% (APPRISE, 2005). The Federal Low-Income Home Energy Assistance Program designs its funding distribution mechanism based on energy burden levels; income is used as the primary qualifier for this program.
+Energy cost burden is a function of both income and energy consumption. Drehobl and Ross (2016) found that an average low-income household energy burden was 7.2% higher than an average higher-income household energy burden of 2.3%. Findings from a federal energy assistance program evaluation determined that low-income households represent 92% of all households with an energy burden of 10% (APPRISE, 2005). The Federal Low-Income Home Energy Assistance Program designs its funding distribution mechanism based on energy burden levels; income is used as the primary qualifier for this program.
 
 This document is organized into five sections to illustrate the potential of the RBSA data. Section 1 describes the data; section 2 outlines the data cleaning and wrangling process; section 3 examines ethical considerations for using the data; section 4 suggests inferential and machine learning models that can be done with the data. Finally, section 5 concludes by providing uses of the RBSA data when merged with other data.
 
@@ -105,7 +105,7 @@ if(!require(lubridate)){
 
 This data is from the Residential Building Stock Assessment [(RBSA)](https://neea.org/resources/rbsa-ii-combined-database) conducted in 2016-17 (the specific data collection months are unclear, the 2022 RBSA data collection is scheduled for June and July). It includes a representative sample of single-family, multi-family, and manufactured homes gathered across the Northwest region. It has 47 comma-separated variable (CSV) tabular dataframes that includes a representative sample of 1,130 single-family, 230 multi-family, and 550 manufactured homes gathered across the Northwest region. Participants are recruited based on a random selection of single-family residential USPS addresses for the single-family component. For the multi-family component, the study recruited multi-family buildings to participate in the survey and then identified tenants in those buildings willing to participate. Two auditors performed each site visit. Audits lasted approximately two hours and covered all of the major components of the homes that can be linked to the household’s overall energy use, including building envelope, HVAC systems, lighting, appliances, electronics, and water technologies. In addition, the RBSA audit data was combined with self-reported home characteristics and demographics data collected in the phone survey during the recruitment of an on-site sample. Supporting documentation of the RBSA data can be found [here](https://neea.org/data/residential-building-stock-assessment).
 
-The RBSA dataset comprises 49 files: 47 CSV files, one .txt ReadMe, and an excel spreadsheet with unique dataset values. One of the CSV tables is a data dictionary that describes the column names in each CSV table. The size of the CSV files ranges from 2 KB to 16.6 MB. The smallest table contains 11 columns and 14 rows/observations, while the largest has 249 columns and 15561 rows/observations. The ReadMe details changes to the RBSA dataset; changes and updates are numbered and organized by date. Each row in a table has a unique primary key (PK), making it possible to reference that specific object, and may include other relational keys (CKs) that make it possible to relate to other tables in the dataset. Most tables can be joined using the CK_SiteID and the CK_RoomID.
+The RBSA dataset comprises 49 files: 47 CSV files, one .txt ReadMe, and an excel spreadsheet with unique dataset values. One of the CSV tables is a data dictionary that describes the column names in each CSV table. The size of the CSV files ranges from 2 KB to 16.6 MB. The smallest table contains 11 columns and 14 rows/observations, while the largest has 249 columns and 15561 rows/observations. The ReadMe details changes to the RBSA dataset; changes and updates are numbered and organized by date. Each row in a table has a unique primary key (PK), making it possible to reference that specific object and may include other relational keys (CKs) that make it possible to relate to other tables in the dataset. Most tables/dataframes can be joined using the CK_SiteID and the CK_RoomID.
 
 The RBSA dataset houses data for manufactured homes, single-family homes, and multi-family residences. Within the dataset, data are attributed to a Site or a Building. Building data include information collected for nonresidential portions of a multi-family building. Site data include data collected for the entirety of a single-family or manufactured home and for residences visited at a multi-family building. The dataset denotes data associated with a Site by a CK_SiteID or PK_SiteID beginning with “SITE”; the dataset denotes data associated with a Building by a CK_SiteID or PK_SiteID beginning with “BLDG.”
 
@@ -141,7 +141,7 @@ Dplyr from the Tidyverse was used to merge the "Site Interview Demographics" to 
 
 After the merger, the dataframe was subsetted for the "Puget Sound" region. Next, housing and household characteristic variables, as outlined by the Buylova (2020) paper, were selected to create the analytical dataframe (refer to Appendix A to learn more about the housing and household characteristic variables). The EUI, the response variable, was created by dividing the total annual energy consumption (which is in British Thermal Units (kBTU)) by the conditioned living area of the home (sq. foot). Variables with kBTU units were identified and summed to create a total annual energy use variable. Once the analytic dataframe had all the necessary variables, I checked for missingness. 
 
-The first attempt to check for missing data resulted in 7301 missing data. Upon further examination, I noticed there was missing data in the RBSA dataset coded as "unknown," "prefer not to say," and as the character value "N/A." I recoded variables with those observations as NA (missing). Many variables needed to be transformed to replicate the Buylova (2020) model, such as age, income, and the total occupants. The income variable was a character variable that provided an income range. I split the income variable into low_end and high_end income then took the average of the low_end and high_end income to create an average income variable. Finally, I used the "janitor" package to make every variable consistent - lowercase and snake case.
+The first attempt to check for missing data resulted in 7301 missing data. Upon further examination, I noticed there was missing data in the RBSA dataset coded as "unknown," "prefer not to say," and as the character value "N/A." I recoded variables with those observations as NA (missing). Many variables needed to be transformed to replicate the Buylova (2020) model, such as age, income, and the total occupants. The income variable was a character variable that provided an income range. I split the income variable into low_end and high_end income variables then took the average of the low_end and high_end income to create an average income variable. Finally, I used the "janitor" package to make every variable consistent - lowercase and snake case.
 
 ```{r}
 #Explore the one line summary dataframe
@@ -278,6 +278,12 @@ pug_eui <- pug_eui_income %>%
   mutate(ses = factor(ses, levels = c("low", "middle", "high")))
 ```
 
+
+```{r}
+#Final Analytical Dataframe 
+psych::describe(pug_eui, fast = TRUE)
+```
+
 ---
 
 # Section 3: Data Assessment
@@ -285,7 +291,7 @@ pug_eui <- pug_eui_income %>%
 ## Key Steps
 
 1) Examined RBSA data affordances and limitations 
-2) Read literature of data ethics 
+2) Read literature on data ethics 
 3) Explored data for identifiability 
 4) Identified potential data mergers that may raise privacy concerns
 
@@ -296,7 +302,6 @@ More research opportunities become available when the RBSA data is merged with o
 Data is not neutral. People use data to convey a narrative about individuals, organizations, institutions, and the environment. As a result, data has the power to shape people's worldviews and influence their decisions. The depth and breadth of the RBSA data provide researchers and analysts with a myriad of analytical options and narratives they can tell. While data ought to be public and democratized, it can lead to bad actors using data to reify inequities. Users of the RBSA data should be mindful of the narrative they are telling with their data analysis and how their research can potentially be used to do harm. 
 
 Identifiability is becoming less of a binary and more of a continuum. In other words, privacy is not about private or public, but about how much information is disclosed, which can make certain groups and individuals more seen. The RBSA is publicly available data that does not disclose individual addresses or people's names. However, a person's zip code, type of house, annual income, and the age of the homeowners/residents can result in individual houses becoming more identifiable. Disclosure risks increase with dimensionality (more variables), linking multiple data sources, and using data analytics. This may run the risk of not adequately protecting vulnerable groups in the dataset. For example, if this data is merged with other data sets, someone can identify households comprised of only older adults or single people. This is a cause for concern for these vulnerable groups. Geospatial analyses need to be done with care to mitigate the potential for identifying people.
-
 
 ### Suggested Readings:
 
@@ -384,11 +389,11 @@ ggplot() + geom_bar(aes(primary_heating_system, annual_energy_use, fill = ses),
 1) Replicated Buylova Model 
 2) Provided alternative Models
 
-The RBSA dataset was cleaned, wrangled, and explored to understand its potential to answer critical research questions centered on the intersection of energy use and equity. The data exploration was guided by the methods employed by Buylova's (2020) paper, which used RBSA and ACS data to understand energy equity in Oregon. I used housing and household characteristic variables (Check Appendix A for more information) to replicate Buylova's OLS regression model. The response variable in Buylova's model was resident's energy use intensity (EUI), calculated by dividing annual energy use by the square footage of the home. The model included several explanatory variables, such as income level. 
+The RBSA dataset was cleaned, wrangled, and explored to understand its potential to answer critical research questions centered on the intersection of energy use and equity. The data exploration was guided by the methods employed by Buylova's (2020) paper, which used RBSA and ACS data to understand energy equity in Oregon. I used housing and household characteristic variables (Check Appendix A for more information) to replicate Buylova's OLS regression model. The response variable in Buylova's model was resident's energy use intensity (EUI), calculated by dividing annual energy use by the home's square footage. The model included several explanatory variables, such as income level. 
 
-Instead of creating the same income levels Buylova used, I developed a socioeconomic status (SES) variable indicating whether a person was in a low, middle, or high-income class. A person's SES was calculated by determining income cutoff points based on household size and what is considered a livable wage in the Puget Sound Region for 2020. Future researchers should develop a more accurate measure of a livable wage in the Puget Sound Region for 2017 - when the data was collected. Additionally, the EUI variable had over 200 missing observations, negatively affecting the model. An imputation should be applied to account for the missing EUI observations.
+Instead of creating the same income levels Buylova used, I developed a socioeconomic status (SES) variable indicating whether a person was in a low, middle, or high-income class. A person's SES was calculated by determining income cutoff points based on household size and what is considered a livable wage in the Puget Sound Region for 2020. Future researchers should develop a more accurate measure of a livable wage in the Puget Sound Region for 2017 - when the data was collected. Additionally, the EUI variable had over 200 missing observations, which may adversely affect the model. An imputation should be applied to account for the missing EUI observations and other key variables.
 
-Future modeling may include a machine learning model to examine multicollinearity between variables and identify variables that have the most significant impact on energy use. Further, a machine learning regression model can be applied to determine which homes will most likely have a high energy use. The results can then be mapped to quickly identify which regions and groups of people in the Puget Sound are more susceptible to high energy used based on specific variables in the data.
+Future modeling may include a machine learning model to examine multicollinearity between variables and identify variables that have the most significant impact on energy use. Further, a machine learning regression model can be applied to determine which homes will most likely have a high energy use. The results can then be mapped to quickly identify which regions and groups of people in the Puget Sound are more susceptible to high energy use based on specific variables in the data.
 
 ```{r}
 #model  
@@ -405,14 +410,16 @@ lm(eui ~ home_type_final + year_built_decade + primary_heating_system + qty_bedr
 
 ## Key Steps
 
-1) Identify secondary datasets 
-2) Develop a alternative research questions
+1) Identified secondary datasets 
+2) Developed alternative research questions
 
 The RBSA data exploration was guided by how Buylova (2020) used the RBSA data to investigate the dynamics between energy use and socio-demographic characteristics in spatial modeling of residential energy consumption. Buylova's investigation was done by merging the RBSA data with ACS data. It has yet to be seen what other data sources researchers can use alongside the RBSA dataset and what questions they can answer. This section attempts to imagine innovative approaches to using the RBSA dataset to answer relevant and critical questions. 
 
 The RBSA data could potentially be paired with housing data, such as the Washington Merged Longitudinal Administrative Data [(WMLAD)](https://uwescience.github.io/MinWA/Overview/) or [Zillow](https://www.zillow.com/research/data/) data to illustrate a clearer picture of housing burden in Washington State or specifically the Puget Sound region. Housing burden measures include rent, transportation, and utilities. WMLAD provides rent and transportation, while RBSA provides utility data. Paired with existing housing data, like WMLAD, the RBSA data can create a latent variable for housing burden that may have policy implications. The latent housing burden variable may include a person’s monthly rent, commute, and energy costs. Combining this data could help make a case for more energy-efficient policies in the Puget Sound or promote other policy levers to mitigate housing burden. 
 
-During the RBSA data exploration, I recommended other datasets for further analysis. Specifically, data from the Residential Energy Consumption Survey (RECS) administered by the US Energy Information Administration (EIA). RECS is a nationally representative sample of housing. Since 1980, EIA has collected energy characteristics on housing units, usage patterns, and household demographics every four years. Researchers can create a longitudinal dataset with the RECS data to model historical state trends in energy consumption or build a robust model to predict energy consumption across the state of Washington. However, there are restrictions to the RECS data. Researchers could obtain full access to the RECS data by developing a data-sharing agreement. 
+During the RBSA data exploration, I found other datasets for further analysis. Specifically, data from the Residential Energy Consumption Survey (RECS) administered by the US Energy Information Administration (EIA). RECS is a nationally representative sample of housing. Since 1980, EIA has collected energy characteristics on housing units, usage patterns, and household demographics every four years. Researchers can create a longitudinal dataset with the RECS data to model historical state trends in energy consumption or build a robust model to predict energy consumption across the state of Washington. However, there are restrictions to the RECS data. Researchers could obtain full access to the RECS data by developing a data-sharing agreement. 
+
+Researchers can use local county assessor data to calculate the energy use of every building in a local area. For example, King County's assessor's office provides data on residential buildings' appraisal history, taxes, property sales, condition, size, and much more for every building in King County. The estimates generated from the model with the RBSA data can be applied to these data to calculate housing affordability in a specific locality. King County's Department of Assessment has buildings’ value history from 1997 to 2012. Future researchers should merge and analyze value history data to illustrate pricing and affordability trends in King County.
 
 Energy consumption doesn’t just have a costly effect on individual households; it also has deleterious environmental implications. As a result, reducing energy consumption in densely populated areas is of great importance. Researchers should focus on residential energy consumption and commercial buildings’ energy consumption. The Building Energy Benchmarking dataset, constructed by Seattle’s Building Energy Benchmarking and Reporting Program, provides sufficient information to examine how residential and commercial buildings contribute to high energy use. The dataset contains data of the building’s EUI and physical conditions, including energy star scores. 
 
@@ -421,6 +428,8 @@ There is a wealth of energy datasets with important information waiting to be an
 ### Other Datasets 
 
 [Residential Energy Consumption Survey (RECS)](https://www.eia.gov/consumption/residential/index.php)
+
+[King County Assessment Data](https://info.kingcounty.gov/assessor/DataDownload/default.aspx) 
 
 [Seattle Building Energy Benchmarking](https://data.seattle.gov/dataset/2015-Building-Energy-Benchmarking/h7rm-fz6m/data)
 
@@ -471,6 +480,4 @@ There is a wealth of energy datasets with important information waiting to be an
 
 3) [Seattle Building Energy Benchmarking](https://data.seattle.gov/dataset/2015-Building-Energy-Benchmarking/h7rm-fz6m/data)
 
-
-
-
+4) [King County Assessment Data](https://info.kingcounty.gov/assessor/DataDownload/default.aspx) 
